...
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProducts"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="Inventario de Productos"
        app:icon="@android:drawable/ic_menu_agenda"
        android:textSize="16sp"
        app:cornerRadius="12dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.Button.ElevatedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSummary"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="Resumen Financiero"
        app:icon="@android:drawable/ic_menu_report_image"
        android:textSize="16sp"
        app:cornerRadius="12dp"
...
